@@ -1,3 +1,6 @@
+2006-11-17 Removed obsolete scatter_classic, leaving a stub to
+           raise NotImplementedError; same for pcolor_classic - EF
+
 2006-11-15 Removed obsolete pcolor_classic - EF
 
 2006-11-15 Fixed 1588908 reported by Russel Owen; factored
